AC_INIT([ldapscripts], [2.0.1], [ganael.laplanche@martymac.org])
AM_INIT_AUTOMAKE
AC_CONFIG_FILES([Makefile
                 etc/Makefile
                 lib/Makefile
                 man/Makefile
                 man/man1/Makefile
                 man/man5/Makefile
                 sbin/Makefile])
AC_PATH_PROG([LDAPSEARCHBIN], [ldapsearch])
AC_PATH_PROG([LDAPADDBIN], [ldapadd])
AC_PATH_PROG([LDAPDELETEBIN], [ldapdelete])
AC_PATH_PROG([LDAPMODIFYBIN], [ldapmodify])
AC_PATH_PROG([LDAPMODRDN], [ldapmodrdn])
AC_PATH_PROG([LDAPPASSWDBIN], [ldappasswd])

AC_OUTPUT
