## Process this file with automake to produce Makefile.in
sbin_SCRIPTS = ldapaddgroup\
		ldapaddmachine\
		ldapadduser\
		ldapaddusertogroup\
		ldapdeletegroup\
		ldapdeletemachine\
		ldapdeleteuser\
		ldapdeleteuserfromgroup\
		ldapfinger\
		ldapgid\
		ldapid\
		ldapinit\
		ldapmodifygroup\
		ldapmodifymachine\
		ldapmodifyuser\
		ldaprenamegroup\
		ldaprenamemachine\
		ldaprenameuser\
		ldapsetpasswd\
		ldapsetprimarygroup\
		lsldap
