man1_MANS = ldapaddgroup.1\
		ldapaddmachine.1\
		ldapadduser.1\
		ldapaddusertogroup.1\
		ldapdeletegroup.1\
		ldapdeletemachine.1\
		ldapdeleteuser.1\
		ldapdeleteuserfromgroup.1\
		ldapfinger.1\
		ldapgid.1\
		ldapid.1\
		ldapinit.1\
		ldapmodifygroup.1\
		ldapmodifymachine.1\
		ldapmodifyuser.1\
		ldaprenamegroup.1\
		ldaprenamemachine.1\
		ldaprenameuser.1\
		ldapsetpasswd.1\
		ldapsetprimarygroup.1\
		lsldap.1

